--- a/man/biocad_registry/data_imports/data_imports/imports_metab_repo.1
+++ b/man/biocad_registry/data_imports/data_imports/imports_metab_repo.1
@@ -5,6 +5,7 @@ imports_metab_repo \-
 .SH SYNOPSIS
 \fIimports_metab_repo(\fBregistry\fR as <generic> biocad_registry, 
 \fBmetab\fR as any, 
+\fBlazy_molecule_ctor\fR as boolean = TRUE, 
 [\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 data_imports
