--- a/man/imports_genebank.obsolete.1
+++ b/man/imports_genebank.obsolete.1
@@ -8,7 +8,7 @@ imports_genebank.obsolete \- imports_genebank.obsolete(biocad.registry, genebank
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBgenebank\fB \fR\- . A ncbi genebank data object, all CDS/rna features inside this genebank data object will be extract and imports into database.
+\fBgenebank\fB \fR\- . 
 .PP
 .SH DETAILS
 .PP
