--- a/man/imports_metacyc.1
+++ b/man/imports_metacyc.1
@@ -1,4 +1,4 @@
-﻿.TH IMPORTS_METACYC 1 2025-Jun "" "helper function for imports the metacyc molecules and reactions"
+﻿.TH IMPORTS_METACYC 1 2025-Jun "" "imports_metacyc"
 .SH NAME
 imports_metacyc \- imports_metacyc(biocad.registry, metacyc)
 .SH SYNOPSIS
