--- a/man/open_registry.1
+++ b/man/open_registry.1
@@ -17,7 +17,7 @@ open_registry \- open_registry(user, passwd,
 \fBpasswd\fB \fR\- . 
 .PP
 .PP
-\fBhost\fB \fR\- 'localhost'. the mysql server host
+\fBhost\fB \fR\- 'localhost'. 
 .PP
 .PP
 \fBport\fB \fR\- 3306. 
