--- a/man/rna_term.1
+++ b/man/rna_term.1
@@ -1,4 +1,4 @@
-﻿.TH RNA_TERM 1 2025-Jun "" "get vocabulary term id of ``RNA``"
+﻿.TH RNA_TERM 1 2025-Jun "" "rna_term"
 .SH NAME
 rna_term \- rna_term(biocad.registry)
 .SH SYNOPSIS
