--- a/man/find_molecule.1
+++ b/man/find_molecule.1
@@ -1,4 +1,4 @@
-﻿.TH FIND_MOLECULE 1 2025-Jun "" "Find or Register a Target Metabolite in BioCAD Registry This function searches for a metabolite in the BioCAD registry using cross-referencing IDs. If not found, it attempts to register a new metabolite entry with provided metadata."
+﻿.TH FIND_MOLECULE 1 2025-Jun "" "Find or Register a Target Metabolite in BioCAD Registry"
 .SH NAME
 find_molecule \- find_molecule(biocad.registry, meta, xref.id)
 .SH SYNOPSIS
@@ -17,6 +17,12 @@ find_molecule \- find_molecule(biocad.registry, meta, xref.id)
 .PP
 Returns a metabolite object if found/registered successfully. Returns \code{NULL} if: \itemize{ \item Metabolite not found and failed to register \item Invalid input parameters \item Database errors occur }
 .PP
+.SH EXAMPLES
+.PP
+\dontrun{ result <- find_molecule( biocad_registry = my_registry, meta = list( name = "ATP", formula = "C10H16N5O13P3", description = "Adenosine triphosphate" ), xref_id = "CHEBI:15422" ) }
+.PP
+.SH SEE ALSO
+\code{\link{check_metabolite}} for primary lookup logic
 .SH FILES
 .PP
 SMRUCC/R#.declare_function.find_molecule at find_molecule.R:line 55
