--- a/man/gene_term.1
+++ b/man/gene_term.1
@@ -1,4 +1,4 @@
-﻿.TH GENE_TERM 1 2025-Jun "" "get vocabulary term id of ``Nucleic Acid``"
+﻿.TH GENE_TERM 1 2025-Jun "" "gene_term"
 .SH NAME
 gene_term \- gene_term(biocad.registry)
 .SH SYNOPSIS
