--- a/man/get_genbank.1
+++ b/man/get_genbank.1
@@ -1,4 +1,4 @@
-﻿.TH GET_GENBANK 1 2025-Jun "" "Download GenBank Assembly File from NCBI FTP Server This helper function constructs the NCBI FTP path for a given assembly ID, retrieves the corresponding GenBank genomic file (*.gbff.gz), and downloads it to a local directory."
+﻿.TH GET_GENBANK 1 2025-Jun "" "Download GenBank Assembly File from NCBI FTP Server"
 .SH NAME
 get_genbank \- get_genbank(asm.id,
     <i>repo.dir</i> = <span style='color: brown;'><strong>'./'</strong></span>)
@@ -19,6 +19,10 @@ Invisibly returns the full path to the downloaded file. Primarily called for its
 .SH DETAILS
 .PP
 The function: \enumerate{ \item Parses the assembly ID into prefix and numeric components \item Constructs the NCBI FTP directory path using the ID structure \item Retrieves the compressed GenBank file (*_genomic.gbff.gz) \item Downloads the file to the specified local directory }
+.PP
+.SH EXAMPLES
+.PP
+\dontrun{ # Download assembly GCF_123456789 to the current directory get_genbank("GCF_123456789") # Save to a custom directory get_genbank("GCA_987654321", repo_dir = "path/to/genbank_files") }
 .PP
 .SH FILES
 .PP
