--- a/man/imports_kegg.1
+++ b/man/imports_kegg.1
@@ -1,4 +1,4 @@
-﻿.TH IMPORTS_KEGG 1 2025-Jun "" "Import KEGG compound data into biocad registry This function imports chemical compound data from KEGG database into a biocad registry system, handling metabolite registration, cross-reference management, and compound metadata integration."
+﻿.TH IMPORTS_KEGG 1 2025-Jun "" "Import KEGG compound data into biocad registry"
 .SH NAME
 imports_kegg \- imports_kegg(biocad.registry, kegg)
 .SH SYNOPSIS
@@ -17,6 +17,10 @@ Invisibly returns NULL. Mainly used for populating the biocad registry with meta
 .SH DETAILS
 .PP
 The function performs these key operations: 1. Initializes database terminology for metabolite entities 2. Processes KEGG compound entries with progress tracking 3. For each compound: - Extracts database cross-references (ChEBI, PubChem, CAS) - Builds standardized compound metadata structure - Checks for existing registry entries - Updates database with new compounds and related information 4. Maintains cross-database consistency through: - KEGG-to-external database identifier mapping - Synonym management - Structural data preservation
+.PP
+.SH EXAMPLES
+.PP
+\dontrun{ # Import from KEGG API response imports_kegg(biocad_registry, kegg_compounds) # Import from parsed file imports_kegg(biocad_registry, read_kegg("compound.xml")) }
 .PP
 .SH FILES
 .PP
