--- a/man/imports_uniprot_obsolete.1
+++ b/man/imports_uniprot_obsolete.1
@@ -1,4 +1,4 @@
-﻿.TH IMPORTS_UNIPROT_OBSOLETE 1 2025-Jun "" "Import UniProt proteins into biocad registry database This helper function imports protein data from UniProt into a biocad registry database, handling sequence embeddings, cross-references, subcellular locations, and keyword associations."
+﻿.TH IMPORTS_UNIPROT_OBSOLETE 1 2025-Jun "" "Import UniProt proteins into biocad registry database"
 .SH NAME
 imports_uniprot_obsolete \- imports_uniprot_obsolete(biocad.registry, uniprot,
     <i>fast.check</i> = <span style='color: blue !important;'>FALSE</span>)
@@ -22,6 +22,10 @@ Invisibly returns NULL. Mainly used for its side effects of populating the bioca
 .SH DETAILS
 .PP
 The function performs these main operations: 1. Initializes sequence embedding transformer (SGT) for protein sequences 2. Sets up database terminology references for proteins 3. Processes input proteins with progress tracking where possible 4. For each protein: - Retrieves sequence, descriptions, locations, and cross-references from UniProt - Checks existing records if fast_check is enabled - Creates new molecule entry if not existing - Adds keyword associations and cross-references (both UniProt and external databases) - Generates and stores sequence graph embeddings - Records subcellular localization information
+.PP
+.SH EXAMPLES
+.PP
+\dontrun{ # Import single protein with progress tracking imports_uniprot(biocad_registry, "P12345") # Batch import with fast checking imports_uniprot(biocad_registry, c("P12345", "Q67890"), fast_check = TRUE) }
 .PP
 .SH FILES
 .PP
