--- a/man/metabolite_term.1
+++ b/man/metabolite_term.1
@@ -1,4 +1,4 @@
-﻿.TH METABOLITE_TERM 1 2025-Jun "" "get vocabulary term id of ``Metabolite``"
+﻿.TH METABOLITE_TERM 1 2025-Jun "" "metabolite_term"
 .SH NAME
 metabolite_term \- metabolite_term(biocad.registry)
 .SH SYNOPSIS
