--- a/man/protein_term.1
+++ b/man/protein_term.1
@@ -1,4 +1,4 @@
-﻿.TH PROTEIN_TERM 1 2025-Jun "" "get vocabulary term id of ``Polypeptide``"
+﻿.TH PROTEIN_TERM 1 2025-Jun "" "protein_term"
 .SH NAME
 protein_term \- protein_term(biocad.registry)
 .SH SYNOPSIS
