Refactor taxonomyInfo class and update export_metabolites API
Moved taxonomyInfo class to a new views module for better organization. Updated export_metabolites function to accept an optional page_size parameter, and updated related documentation and usage examples. Also made minor import cleanups in several modules and added a new pubmed.R script stub.

--- a/man/biocad_registry/data_exports/data_exports/export_metabolites.1
+++ b/man/biocad_registry/data_exports/data_exports/export_metabolites.1
@@ -3,7 +3,8 @@
 .SH NAME
 export_metabolites \- 
 .SH SYNOPSIS
-\fIexport_metabolites(\fBregistry\fR as <generic> biocad_registry);\fR
+\fIexport_metabolites(\fBregistry\fR as <generic> biocad_registry, 
+\fBpage_size\fR as integer = 10000);\fR
 .SH SEE ALSO
 data_exports
 .SH FILES
