fix of the possible null reference error

--- a/man/biocad_registry/data_exports/data_exports/export_by_cids.1
+++ b/man/biocad_registry/data_exports/data_exports/export_by_cids.1
@@ -4,7 +4,8 @@
 export_by_cids \- 
 .SH SYNOPSIS
 \fIexport_by_cids(\fBregistry\fR as <generic> biocad_registry, 
-\fBcid\fR as any);\fR
+\fBcid\fR as any, 
+\fBwrap_tqdm\fR as boolean = TRUE);\fR
 .SH SEE ALSO
 data_exports
 .SH FILES
