run package document msbuild

--- a/man/biocad_registry/data_exports/data_exports/export_metabolites.1
+++ b/man/biocad_registry/data_exports/data_exports/export_metabolites.1
@@ -4,7 +4,9 @@
 export_metabolites \- 
 .SH SYNOPSIS
 \fIexport_metabolites(\fBregistry\fR as <generic> biocad_registry, 
-\fBpage_size\fR as integer = 10000);\fR
+\fBfile\fR as any = \fB<NULL>\fR, 
+\fBpage_size\fR as integer = 10000, 
+[\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 data_exports
 .SH FILES
