--- a/man/imports_chebi.1
+++ b/man/imports_chebi.1
@@ -8,7 +8,8 @@ imports_chebi \- imports_chebi(biocad.registry, chebi)
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBchebi\fB \fR\- . 
+\fBchebi\fB \fR\- . the chebi ontology OBO database, the metabolite
+compound data will be extract from this database obejct.
 .PP
 .SH FILES
 .PP
