--- a/man/imports_genebank.obsolete.1
+++ b/man/imports_genebank.obsolete.1
@@ -8,11 +8,14 @@ imports_genebank.obsolete \- imports_genebank.obsolete(biocad.registry, genebank
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBgenebank\fB \fR\- . 
+\fBgenebank\fB \fR\- . A ncbi genebank data object, all CDS/rna features inside
+this genebank data object will be extract and imports into
+database.
 .PP
 .SH DETAILS
 .PP
-this function will make association between the gene/rna and uniprot protein molecules.
+this function will make association between the gene/rna
+and uniprot protein molecules.
 .PP
 .SH FILES
 .PP
