--- a/man/link_gene_proteins.1
+++ b/man/link_gene_proteins.1
@@ -7,6 +7,12 @@ link_gene_proteins \- link_gene_proteins(biocad.registry)
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
+.SH DETAILS
+.PP
+probabily there is no needs for links the protein back to its
+source gene object, due to the reason of gene sequence could be reverse
+translates from the protein sequence.
+.PP
 .SH FILES
 .PP
 SMRUCC/R#.declare_function.link_gene_proteins at link_gene_proteins.R:line 7
