--- a/man/link_kinetics.1
+++ b/man/link_kinetics.1
@@ -5,7 +5,7 @@ link_kinetics \- link_kinetics(registry)
 \fIlink_kinetics(registry)\fR
 .SH OPTIONS
 .PP
-\fBregistry\fB \fR\- . 
+\fBregistry\fB \fR\- . the mysql database connection to the biocad registry database.
 .PP
 .SH FILES
 .PP
