--- a/man/open_registry.1
+++ b/man/open_registry.1
@@ -17,13 +17,14 @@ open_registry \- open_registry(user, passwd,
 \fBpasswd\fB \fR\- . 
 .PP
 .PP
-\fBhost\fB \fR\- 'localhost'. 
+\fBhost\fB \fR\- 'localhost'. the mysql server host
 .PP
 .PP
 \fBport\fB \fR\- 3306. 
 .PP
 .PP
-\fBdbname\fB \fR\- 'cad_registry'. the database name of the target mysql database, value may be ``cad_registry`` or ``biocad_registry``.
+\fBdbname\fB \fR\- 'cad_registry'. the database name of the target mysql database,
+value may be ``cad_registry`` or ``biocad_registry``.
 .PP
 .SH FILES
 .PP
