--- a/man/find_molecule.1
+++ b/man/find_molecule.1
@@ -3,23 +3,50 @@
 find_molecule \- find_molecule(biocad.registry, meta, xref.id)
 .SH SYNOPSIS
 \fIfind_molecule(biocad.registry, meta, xref.id)\fR
+.SH DESCRIPTION
+.PP
+This function searches for a metabolite in the BioCAD registry using cross-referencing IDs.
+If not found, it attempts to register a new metabolite entry with provided metadata.
+.PP
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBmeta\fB \fR\- . A list containing metabolite metadata. Expected elements: \itemize{ \item \code{name}: (string) Common name of the metabolite \item \code{formula}: (string) Chemical formula \item \code{description}: (string) Optional descriptive text }
+\fBmeta\fB \fR\- . A list containing metabolite metadata. Expected elements:
+\itemize{
+\item \code{name}: (string) Common name of the metabolite
+\item \code{formula}: (string) Chemical formula
+\item \code{description}: (string) Optional descriptive text
+}
 .PP
 .PP
 \fBxref.id\fB \fR\- . 
 .PP
 .SH VALUE
 .PP
-Returns a metabolite object if found/registered successfully. Returns \code{NULL} if: \itemize{ \item Metabolite not found and failed to register \item Invalid input parameters \item Database errors occur }
+Returns a metabolite object if found/registered successfully. Returns \code{NULL} if:
+\itemize{
+\item Metabolite not found and failed to register
+\item Invalid input parameters
+\item Database errors occur
+}
 .PP
 .SH EXAMPLES
 .PP
-\dontrun{ result <- find_molecule( biocad_registry = my_registry, meta = list( name = "ATP", formula = "C10H16N5O13P3", description = "Adenosine triphosphate" ), xref_id = "CHEBI:15422" ) }
+#\dontrun{
+
+result <- find_molecule(
+biocad_registry = my_registry,
+meta = list(
+name = "ATP",
+formula = "C10H16N5O13P3",
+description = "Adenosine triphosphate"
+),
+xref_id = "CHEBI:15422"
+)
+
+#}
 .PP
 .SH SEE ALSO
 \code{\link{check_metabolite}} for primary lookup logic
