--- a/man/imports_sabiork.1
+++ b/man/imports_sabiork.1
@@ -3,24 +3,47 @@
 imports_sabiork \- imports_sabiork(biocad.registry, repo)
 .SH SYNOPSIS
 \fIimports_sabiork(biocad.registry, repo)\fR
+.SH DESCRIPTION
+.PP
+This function imports enzyme kinetic data from SABIO-RK SBML files into a biocad
+registry database, handling model parsing, parameter extraction, and database
+relationship mapping.
+.PP
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBrepo\fB \fR\- . Input specification for kinetic data. Can be either: - Character vector of SBML file paths - Pipeline enumerator for stream processing
+\fBrepo\fB \fR\- . Input specification for kinetic data. Can be either:
+- Character vector of SBML file paths
+- Pipeline enumerator for stream processing
 .PP
 .SH VALUE
 .PP
-Invisibly returns NULL. Mainly used for populating the biocad registry database with kinetic data.
+Invisibly returns NULL. Mainly used for populating the biocad registry
+database with kinetic data.
 .PP
 .SH DETAILS
 .PP
-The function performs these key operations: 1. Processes SBML files from SABIO-RK database 2. For each biochemical reaction: - Extracts kinetic parameters and enzyme information - Links reactions to existing substrate references via database cross-references - Stores complete kinetic models with environmental conditions (pH, temperature) - Maintains traceability through SABIO-RK identifiers 3. Handles duplicate prevention using native database checks
+The function performs these key operations:
+1. Processes SBML files from SABIO-RK database
+2. For each biochemical reaction:
+- Extracts kinetic parameters and enzyme information
+- Links reactions to existing substrate references via database cross-references
+- Stores complete kinetic models with environmental conditions (pH, temperature)
+- Maintains traceability through SABIO-RK identifiers
+3. Handles duplicate prevention using native database checks
 .PP
 .SH EXAMPLES
 .PP
-\dontrun{ # Import single SBML file imports_sabiork(biocad_registry, "path/to/kinetics.xml") # Batch import multiple files imports_sabiork(biocad_registry, c("file1.xml", "file2.xml")) }
+#\dontrun{
+
+# Import single SBML file
+imports_sabiork(biocad_registry, "path/to/kinetics.xml")
+# Batch import multiple files
+imports_sabiork(biocad_registry, c("file1.xml", "file2.xml"))
+
+#}
 .PP
 .SH FILES
 .PP
