--- a/man/molecule_terms.1
+++ b/man/molecule_terms.1
@@ -7,6 +7,10 @@ molecule_terms \- molecule_terms(biocad.registry)
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
+.SH DETAILS
+.PP
+"Nucleic Acid" "RNA" "Polypeptide" "Metabolite"
+.PP
 .SH FILES
 .PP
 SMRUCC/R#.declare_function.molecule_terms at biocad_registry.R:line 25
