--- a/man/push_reaction.1
+++ b/man/push_reaction.1
@@ -3,12 +3,20 @@
 push_reaction \- push_reaction(biocad.registry, reaction, source.db)
 .SH SYNOPSIS
 \fIpush_reaction(biocad.registry, reaction, source.db)\fR
+.SH DESCRIPTION
+.PP
+
+
+This function adds or updates a reaction entry in the biocad registry database,
+including associated enzymes, database cross-references, and metabolite compounds.
+.PP
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBreaction\fB \fR\- . A list containing the reaction data to be pushed into the database. See "Details" for the required structure.
+\fBreaction\fB \fR\- . A list containing the reaction data to be pushed into the database.
+See "Details" for the required structure.
 .PP
 .PP
 \fBsource.db\fB \fR\- . 
@@ -19,14 +27,65 @@ Invisibly returns `NULL`. The function's primary purpose is to modify the databa
 .PP
 .SH DETAILS
 .PP
-The `reaction` argument must be a list with the following structure: ```r list( entry = "unique_id",                 # Unique identifier for the reaction (string) definition = "name",                  # Reaction name or equation (string) comment = "description_string",       # Optional description or notes (string) enzyme = list("ec_number1", ...),     # List of EC numbers (strings) for enzymatic regulation db_xrefs = list(                      # List of cross-references to external databases list(name = "dbname", text = "xref_id"), ... ), compounds = list(                     # List of compounds involved in the reaction list( side = "role_string",           # Compound role (e.g., "substrate", "product", "*" for unknown) compound = list(                # Compound details entry = "compound_id", name = "compound_name", formula = "chemical_formula", factor = stoichiometric_factor  # Numeric (default = 1.0 if missing) ) ), ... ) ) ``` - If a reaction with the same `entry` exists, it will be ​**updated**​ with new data. - Enzymes, cross-references, and compounds are linked to the reaction entry. Duplicates are skipped. - Compounds with `side = "*"` are ignored (used for placeholder entries).
+The `reaction` argument must be a list with the following structure:
+```r
+list(
+entry = "unique_id",                 # Unique identifier for the reaction (string)
+definition = "name",                  # Reaction name or equation (string)
+comment = "description_string",       # Optional description or notes (string)
+enzyme = list("ec_number1", ...),     # List of EC numbers (strings) for enzymatic regulation
+db_xrefs = list(                      # List of cross-references to external databases
+list(name = "dbname", text = "xref_id"),
+...
+),
+compounds = list(                     # List of compounds involved in the reaction
+list(
+side = "role_string",           # Compound role (e.g., "substrate", "product", "*" for unknown)
+compound = list(                # Compound details
+entry = "compound_id",
+name = "compound_name",
+formula = "chemical_formula",
+factor = stoichiometric_factor  # Numeric (default = 1.0 if missing)
+)
+),
+...
+)
+)
+```
+- If a reaction with the same `entry` exists, it will be ​**updated**​ with new data.
+- Enzymes, cross-references, and compounds are linked to the reaction entry. Duplicates are skipped.
+- Compounds with `side = "*"` are ignored (used for placeholder entries).
 .PP
 .SH EXAMPLES
 .PP
-\dontrun{ # Example reaction data reaction_data <- list( entry = "R00001", definition = "ATP + H2O -> ADP + Phosphate", comment = "Hydrolysis of ATP", enzyme = list("3.6.1.3"), db_xrefs = list(list(name = "KEGG", text = "R00001")), compounds = list( list( side = "substrate", compound = list(entry = "C00002", name = "ATP", formula = "C10H16N5O13P3", factor = 1) ), list( side = "product", compound = list(entry = "C00008", name = "ADP", formula = "C10H15N5O10P2", factor = 1) ) ) ) # Push to database push_reaction(biocad_registry = my_registry, reaction = reaction_data) }
+#\dontrun{
+
+# Example reaction data
+reaction_data <- list(
+entry = "R00001",
+definition = "ATP + H2O -> ADP + Phosphate",
+comment = "Hydrolysis of ATP",
+enzyme = list("3.6.1.3"),
+db_xrefs = list(list(name = "KEGG", text = "R00001")),
+compounds = list(
+list(
+side = "substrate",
+compound = list(entry = "C00002", name = "ATP", formula = "C10H16N5O13P3", factor = 1)
+),
+list(
+side = "product",
+compound = list(entry = "C00008", name = "ADP", formula = "C10H15N5O10P2", factor = 1)
+)
+)
+)
+# Push to database
+push_reaction(biocad_registry = my_registry, reaction = reaction_data)
+
+#}
 .PP
 .SH SEE ALSO
-- Use [link_reaction_metabolites()] to resolve compound IDs after pushing reactions. - See the database schema documentation for table structures.
+- Use [link_reaction_metabolites()] to resolve compound IDs after pushing reactions.
+- See the database schema documentation for table structures.
 .SH FILES
 .PP
 SMRUCC/R#.declare_function.push_reaction at push_reactions.R:line 81
