fix of the missing molecule data

--- a/man/link_reaction_metabolites.1
+++ b/man/link_reaction_metabolites.1
@@ -1,11 +1,16 @@
 ﻿.TH LINK_REACTION_METABOLITES 1 2025-Nov "" "link_reaction_metabolites"
 .SH NAME
-link_reaction_metabolites \- link_reaction_metabolites(biocad.registry)
+link_reaction_metabolites \- link_reaction_metabolites(biocad.registry,
+    <i>refresh</i> = <span style='color: blue !important;'>FALSE</span>)
 .SH SYNOPSIS
-\fIlink_reaction_metabolites(biocad.registry)\fR
+\fIlink_reaction_metabolites(biocad.registry,
+    <i>refresh</i> = <span style='color: blue !important;'>FALSE</span>)\fR
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
+.PP
+.PP
+\fBrefresh\fB \fR\- FALSE. 
 .PP
 .SH FILES
 .PP
